@@ -1,3 +1,10 @@
+Mon May 27 07:39:41 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>
+
+  	* ace/Configuration_Import_Export.cpp (squish): Added a
+	  check for '\r' to ensure that empty lines are handled properly.
+  	  Thanks to Vladimir Chovanec <Vladimir.CHOVANEC@asset.sk> for
+ 	  reporting this.
+
 Mon May 27 09:20:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/generate_doxygen.pl:
