@@ -1521,6 +1521,7 @@ Frank Pilhofer <fp@fpx.de>
 Eric Quere <Eric.Quere@med.ge.com>
 Keith Thornton <keith.thornton.kt@germany.agfa.com>
 Nathan Krasney <natan-k@actcom.co.il>
+Marek Maleta <marek_maleta@agilent.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
